[package]
name = "underworlds"
version = "0.1.0"
authors = ["Séverin Lemaignan <severin.lemaignan@plymouth.ac.uk>"]

[dependencies]
#grpc        = "0.2.*"
grpc = {path="../grpc-rust/grpc"}
futures     = "0.*"
futures-cpupool = "0.1.*"
protobuf = "1.*"
tls-api         = "0.*"
httpbis = "0.4.1"

[build-dependencies]
protoc-rust-grpc        = "0.2.*"
